plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'mylog_backend'
version = '0.0.1-SNAPSHOT'

jar {
	archiveBaseName.set('mylog')
	archiveVersion.set('0.0.1-SNAPSHOT')
}


java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' } // ⬅️ 이 줄을 추가해주세요!
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'com.h2database:h2'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// 테스트 코드에서도 롬복 사용
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// validation 추가
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// JWT (jjwt 사용)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'


	// swagger UI를 위한 문서화 의존성
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// JVM 환경 변수 세팅
	implementation 'io.github.cdimascio:dotenv-java:2.2.4'

	// Java에서 JSON 파싱 및 생성에 사용
	implementation 'org.json:json:20231013'


	// Embedded redis 라이브러리
	testImplementation('com.github.codemonstur:embedded-redis:1.4.3') {
		exclude group: 'org.slf4j', module: 'slf4j-simple'
	}


	// 모니터링 도구 prometheus + grafana 조합을 위한 의존성
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'



	testImplementation 'org.mockito:mockito-core'


}

tasks.named('test') {
	useJUnitPlatform {
		excludeTags 'external-integration'
	}
}
